# Heretic2R-UNIX

./: .gitattributes  .gitignore  CHANGES.md  CMakeLists.txt  Makefile  README.md  pack_release.bat
.github/workflows/: build-freebsd.yml  build-haiku.yml  build-linux-riscv64.yml  build-linux.yml  build-macos.yml  build-netbsd.yml  build-openbsd.yml  build-openindiana.yml  build-solaris.yml  release.yml  sync-upstream.yml
include/libsmacker/: smacker.c
include/stb/: stb_vorbis.h
scripts/: check-include-case.py
src/: Heretic2R.sln  clfx
src/H2Common/: H2Common.vcxproj  H2Common.vcxproj.filters
src/H2Common/src/: Common.c  DllMain.c  Math.c  Motion.c  ResourceManager.c  SinglyLinkedList.c  SurfaceProps.c  Vector.c  cpp.hint
src/Player/: Player.vcxproj  Player.vcxproj.filters
src/Player/src/: Player.h  p_actions.c  p_actions.h  p_anim_branch.c  p_anim_branch.h  p_anim_data.c  p_animactor.c  p_anims.c  p_anims.h  p_chicken.c  p_chicken.h  p_items.c  p_main.c  p_types.h  p_weapon.c
src/client effects/: Client Effects.vcxproj  Client Effects.vcxproj.filters
src/client effects/src/: ce_DefaultMessageHandler.c  ce_DefaultMessageHandler.h  ce_Effects.c  ce_Effects.h  ce_Main.c  ce_Message.h  ce_Particles.h  ce_Utilities.c
src/client effects/src/Effects/: fx_Debris.c  fx_Portal.c  fx_Rope.c  fx_Shadow.c  fx_Shrine.c  fx_debris.h  fx_smoke.h
src/client effects/src/Effects/Monsters/: fx_HighPriestessProjectiles.c  fx_Morcalavin.c
src/client effects/src/Effects/SpellsDefensive/: fx_MeteorBarrier.c
src/client effects/src/Effects/SpellsOffensive/: fx_FireWall.c  fx_Maceball.c  fx_PhoenixMissileExplode.c
src/game/: g_MonsterInfo.h  g_Types.h  game.vcxproj  game.vcxproj.filters
src/game/src/: Game.h  cpp.hint  g_ClassStatics.h  g_Combat.c  g_Decals_port.h  g_DefaultMessageHandler.c  g_Edict.h  g_ItemStats.h  g_Items.c  g_Local.h  g_Main.c  g_Message.h  g_MonsterInfo.h  g_PlayStats.h  g_Skeletons.c  g_Spawn.c  g_SpawnFuncs.c  g_Types.h  g_Utilities.c  g_items.h  g_itemstats.h  g_local.h  g_playstats.h  game.h  q_Shared.h  q_shared.h
src/game/src/Cinematics/Corvus/: c_Corvus1_anim.h  c_Corvus2_anim.h  c_Corvus3_anim.h  c_Corvus4_anim.h  c_Corvus5_anim.h  c_Corvus6_anim.h  c_Corvus7_anim.h  c_Corvus8_anim.h  c_Corvus9_anim.h  c_corvus9.h  c_corvus9_anim.h  c_corvus9_moves.h
src/game/src/Cinematics/Dranor/: c_Dranor_anim.h
src/game/src/Cinematics/ElfLord/: c_ElfLord_anim.h
src/game/src/Cinematics/HighPriestess/: c_HighPriestess_anim.h
src/game/src/Cinematics/HighPriestess2/: c_HighPriestess2_anim.h
src/game/src/Cinematics/Morcalavin/: c_Morcalavin_anim.h
src/game/src/Cinematics/Siernan/: c_Siernan1_anim.h
src/game/src/Cinematics/Siernan2/: c_Siernan2_anim.h
src/game/src/Cinematics/SsithraScout/: c_SsithraScout_anim.h
src/game/src/Cinematics/SsithraVictim/: c_SsithraVictim_anim.c  c_SsithraVictim_anim.h
src/game/src/Cinematics/Tome/: c_Tome_anim.h
src/game/src/Commands/: g_ClientCommands.c  g_ServerCommands.c
src/game/src/GameObjects/: g_BreakableBrush.c  g_BreakableBrush.h  g_Debris.c  g_Env.c  g_Field.c  g_Light.c  g_Misc.c  g_Misc.h  g_Obj.c  g_Obj.h  g_Rope.c  g_Shrine.c  g_Target.c  g_Trigger.c  g_WaterEffects.c  g_env.h  g_field.h  g_flamethrower.h  g_func_Button.c  g_func_Button.h  g_func_Door.c  g_func_MonsterSpawner.c  g_func_Plat.c  g_func_Rotating.c  g_func_Timer.c  g_func_Train.c  g_func_Utility.c  g_func_Utility.h  g_light.h  g_misc.h  g_obj.h  g_rope.h  g_trigger.h
src/game/src/Monsters/: PlaguesSithra  g_AI.c  g_Monster.c  g_monster.h  m_Stats.h  m_move.h  m_stats.h
src/game/src/Monsters/Assassin/: m_Assassin.c  m_Assassin_anim.c  m_assassin.h
src/game/src/Monsters/Chicken/: m_Chicken.c
src/game/src/Monsters/ElfLord/: m_ElfLord.c
src/game/src/Monsters/Fish/: m_Fish.c
src/game/src/Monsters/Gkrokon/: m_Gkrokon.c
src/game/src/Monsters/Gorgon/: m_Gorgon.c
src/game/src/NavSys/: buoy.h  mg_AI.c  mg_Buoy.c  mg_Guide.c  mg_Guide.h  mg_guide.h
src/game/src/Player/: p_Client.c  p_Funcs.c  p_HUD.c  p_Items.c  p_Morph.c  p_View.c  p_funcs.h
src/game/src/Saving/: g_Save.c  g_SaveDefs.c
src/game/src/Scripting/: sc_CScript.cpp  sc_CScript.h  sc_Main.cpp  sc_Pcode.h
src/game/src/SpellsDefensive/: spl_Teleport.c
src/game/src/SpellsOffensive/: spl_FireWall.c  spl_Maceball.c
src/launcher/: Heretic2R.vcxproj  Heretic2R.vcxproj.filters
src/qcommon/: ArrayedList.h  Debug.h  FX.h  H2Common.h  Heretic2.h  Message.c  Message.h  Random.h  SinglyLinkedList.h  Skeletons.c  ce_LevelMaps.h  netmsg_read.c  netmsg_write.c  q_Physics.h  q_Typedef.h  q_shared.h  qcommon.h  qfiles.h
src/quake2/: quake2.vcxproj  quake2.vcxproj.filters
src/quake2/src/client/: cl_camera.c  cl_demo.c  cl_effects.c  cl_entities.c  cl_globals.c  cl_input.c  cl_main.c  cl_messages.c  cl_parse.c  cl_prediction.c  cl_screen.c  cl_smk.c  cl_view.c  client.h  console.c  glimp_sdl3.c  glimp_sdl3.h  input_sdl3.c  keys.c  menu.c  menu.h  screen.h
src/quake2/src/cs_shared/: Debug.c  cmd.c  cmodel.c  common.c  files.c  net_chan.c  pmove.c
src/quake2/src/server/: server.h  sv_ccmds.c  sv_effects.c  sv_game.c  sv_init.c  sv_main.c  sv_send.c  sv_user.c  sv_world.c
src/quake2/src/unix/: Quake2Main.h  clfx_dll.c  clfx_dll.h  clfx_dll_unix.h  clfx_stub.c  compat.h  ded_stubs.c  dll_io_unix.h  in_sdl3.c  main.c  net_udp.c  p_dll_unix.c  q_shunix.c  snd_dll.c  snd_dll.h  sys_unix.c  vid_dll.h  vid_screenshot.c  vid_sdl3.c
src/quake2/src/win32/: Quake2Main.h  net_wins.c  sys_win.c
src/ref_gl1/: ref_gl1.vcxproj  ref_gl1.vcxproj.filters
src/ref_gl1/src/: Hunk.c  gl1_Debug.c  gl1_Draw.c  gl1_DrawCinematic.c  gl1_FindSurface.c  gl1_FindSurface.h  gl1_FlexModel.c  gl1_Image.c  gl1_Image.h  gl1_Light.c  gl1_Lightmap.c  gl1_Lightmap.h  gl1_Local.h  gl1_Main.c  gl1_Misc.c  gl1_Model.c  gl1_Model.h  gl1_SDL.c  gl1_Sky.c  gl1_Surface.c  gl1_Warp.c
src/ref_gl1/src/Skeletons/: r_Skeletons.c
src/snd_sdl3/: snd_sdl3.vcxproj  snd_sdl3.vcxproj.filters
src/snd_sdl3/src/: snd_local.h  snd_main.c  snd_ogg.c  snd_sdl3.c  snd_wav.c
stuff/: Heretic_II_Patch_106_for_H2R.md5
(+46 files in other folders)
